# lollms_client

./: .gitignore  CHANGELOG.md  DOC.md  DOC_DEV.md  DOC_USE.md  None  README.md  config.json  lollms_app_builder.md  lollms_app_builder_vscoder.md  pyproject.toml  requirements.txt  sales_database_working_copy.xlsx  setup.py  todo.txt
ai_documentation/: README.md  lollms_core_classes.md  lollms_tasks_classes.md
docs/md/: artefact_versionning.md  building_bindings.md  examples.md  get_context_status.md  index.md  index_.md  init.md  lollms_config.md  lollms_core.md  lollms_discussion.md  lollms_discussion_chat.md  lollms_llm_binding.md  lollms_mcp_binding.md  lollms_modality_bindings.md  lollms_utilities.md  tti_bindings.md
examples/: .env.example  agentic_personality_tools_example.py  artefacts_tests.py  article_summary.py  console_discussion.py  deepsearch.py  episodic_memory_example.py  function_calling_with_local_custom_mcp.py  generate_a_benchmark_for_safe_store.py  generate_test_data.py  generate_with_tools_arxiv_example.py  gradio_lollms_chat.py  internet_search_with_rag.py  llama_cpp_server_ensemble_example.py  llama_cpp_server_example.py  llama_cpp_server_multi_model_example.py  llama_cpp_server_parallel_slots_example.py  llm_vision_flux_klein_loop.py  lmstudio_optimizer.py  lollms_discussions_test.py  lollms_memory_gemma4_example.py  lollmsbot_advanced_agent.py  lollmsbot_agent.py  ollama_vision_flux_klein_loop.py  rag_deep_research_example.py  run_remote_mcp_example copy.py  simple_text_gen_test.py  simple_text_gen_with_image_test.py  temperature_influence_experiment.py  test_code_execution.py  test_discussion.py  test_discussion_artifacts.py  test_discussion_branching.py  test_form_generation.py  test_lmstudio_ultimate.py  test_memory_real_integration.py  test_openai_compatible_with_lollms_chat.py  text_2_audio.py  text_2_image.py  text_and_image_2_audio.py  (+6 more)
examples/function_call/: functions_call_with images.py
examples/lollms_chat/: calculator.py  derivative.py  test_openai_compatible_with_lollms_chat.py
examples/mcp_examples/: external_mcp.py
examples/old/: function_calling_with_local_custom_mcp.py  gradio_chat_app.py  initialization_callback_example.py  internet_search_with_rag.py  simple_text_gen_with_image_test.py  text_2_audio.py  text_2_image_diffusers.py  text_gen.ipynb  text_gen_long_context.py
lollms_client/: __init__.py  lollms_core.py  lollms_discussion.py  lollms_functions.py  lollms_llm_binding.py  lollms_mcp_binding.py  lollms_mcp_security.py  lollms_personality.py  lollms_personality_worker.py  lollms_python_analyzer.py  lollms_stt.py  lollms_stt_binding.py  lollms_tasks.py  lollms_tasks_info.md  lollms_tti.py  lollms_tti_binding.py  lollms_ttm_binding.py  lollms_tts.py  lollms_tts_binding.py  lollms_ttv_binding.py  lollms_types.py  lollms_utilities.py  lollms_xtts.py
lollms_client-0.19.1/: PKG-INFO  README.md  pyproject.toml
lollms_client-0.19.1/examples/: local_mcp.py  text_2_audio.py
lollms_client-0.19.1/examples/personality_test/: tesks_test.py
lollms_client-0.19.1/lollms_client/: __init__.py  lollms_config.py  lollms_core.py  lollms_discussion.py  lollms_mcp_binding.py  lollms_python_analyzer.py  lollms_tti_binding.py
lollms_client-0.19.1/lollms_client/llm_bindings/llamacpp/: __init__.py
lollms_client-0.19.1/lollms_client/llm_bindings/ollama/: __init__.py
lollms_client-0.19.1/lollms_client/llm_bindings/transformers/: __init__.py
lollms_client-0.19.1/lollms_client/stt_bindings/lollms/: __init__.py
lollms_client-0.19.1/lollms_client/stt_bindings/whisper/: __init__.py
lollms_client-0.19.1/lollms_client/tti_bindings/dalle/: __init__.py
lollms_client-0.19.1/lollms_client/tti_bindings/diffusers/: __init__.py
lollms_client-0.25.5/: PKG-INFO  README.md
lollms_client-1.5.7/: PKG-INFO  pyproject.toml
src/app/: .gitignore  (+2 more)
test/: conftest.py  test_agent_cognitive_decisions.py  test_agentic_loop_pathologies.py  test_agentic_tool_orchestration.py  test_artefact_syncing.py  test_artifact_recreation_loop.py  test_artifact_sync_for_tools.py  test_artifact_versioning_and_export.py  test_code_fence_protection.py  test_cognitive_interrupt_and_cancel.py  test_context_budget_guard.py  test_data_artefact_corruption_fix.py  test_dual_copy_virtual_history.py  test_dual_stream_data_protocol.py  test_file_import_engine.py  test_handbag.py  test_high_grade_agent.py  test_image_suppression.py  test_import_conflict_resolution.py  test_inline_code_fence_leak.py  test_lcp_cwd_management.py  test_lollms_artifact_tools.py  test_lollms_data_files.py  test_lollms_discussion.py  test_lollms_episodic_memory.py  test_lollms_memory.py  test_multi_binding.py  test_scratchpad_interception.py  test_search_replace_double_version.py  test_vision_hydration_visibility.py  test_whisper_stt_server.py
(+368 files in other folders)
