[build-system]
requires = ["setuptools>=80.9", "wheel"]
build-backend = "setuptools.build_meta"
# REMOVE THE LINE BELOW:
# backend-path = ["."]

[project]
name = "lollms_client"
dynamic = ["version"]
authors = [
    {name = "ParisNeo", email = "parisneoai@gmail.com"},
]
description = "A client library for LoLLMs generate endpoint"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "httpx",
    "requests",
    "ascii-colors>=0.11.26",
    "pipmaster>=1.1.13",
    "pyyaml",
    "tiktoken",
    "pydantic",
    "numpy",
    "pillow",
    "sqlalchemy",
    "jsonschema"
]

[project.optional-dependencies]
app = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pandas",
    "openpyxl",
    "matplotlib",
    "beautifulsoup4",
    "duckduckgo-search"
]

[project.urls]
Homepage = "https://github.com/ParisNeo/lollms_client"

# Exclude script launcher from the core library package
[project.scripts]
lollms-discussions = "lollms_client.apps.lollms_discussions.server:main"
lollms-code = "lollms_client.apps.lollms_code.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["lollms_client.egg-info*", "lollms_client.llm_bindings.llama_cpp_server.bin"]

[tool.setuptools.dynamic]
version = {attr = "lollms_client.__version__"}
[tool.setuptools.package-data]
lollms_client = ["assets/*.json", "**/description.yaml", "apps/lollms_discussions/static/*", "apps/lollms_code/*"]
